@startuml Class
!theme metal
class Director {
    +Director()
    +construct(Builder):void
}
interface Builder {
    +startUpOperations():void
    +buildBody():void
    +insertWheels():void
    +endOperations():void
    +getVehicle():Product
}
class Product {
    +Product()
    +add(String):void
    +showProduct():void
}
class Car {
    +Car(String)
    +startUpOperations():void
    +buildBody():void
    +insertWheels():void
    +addHeadlights():void
    +endOperations():void
    +getVehicle():void
}
class Motorcycle {
    +Motorcycle(String)
    +startUpOperations():void
    +buildBody():void
    +insertWheels():void
    +addHeadlights():void
    +endOperations():void
    +getVehicle():void
}

Director -l-> Builder
Car -u-|> Builder
Motorcycle -d-|> Builder
Car -u-> Product
Motorcycle -d-> Product

@enduml